0030820: Draw Harness, ViewerTest - vsetcolor has no effect on objects created by vsegment and vtriangle

MyPArrayObject class (an interactive object representing some array of primitives) is improved: a possibility of color changing is added to it.